--- a/css/agency.css
+++ b/css/agency.css
@@ -1,4 +1,4 @@
-body {
+intro-lead-inbody {
 	overflow-x: hidden;
 	font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif
 }
@@ -182,38 +182,45 @@ header .intro-text {
 }
 header .intro-text .intro-lead-in {
 	font-family: "PingFang TC", "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
-	font-style: italic;
-	font-size: 22px;
-	line-height: 22px;
-	margin-bottom: 25px
+	font-weight: 300;
+	font-size: 32px;
+	line-height: 32px;
+	margin-top: -100px;
+	margin-bottom: 30px;
+	text-align:left;
 }
 header .intro-text .intro-heading {
 	font-family: "PingFang TC", Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	text-transform: uppercase;
-	font-weight: 700;
-	font-size: 50px;
-	line-height: 50px;
-	margin-bottom: 25px
+	font-weight: 100;
+	font-size: 22px;
+	line-height: 22px;
+	margin-bottom: 20px;
+	text-align:left;
 }
 @media (min-width:768px) {
 	header .intro-text {
 		padding-top: 300px;
-		padding-bottom: 200px
+		padding-bottom: 200px;
+
 	}
 	header .intro-text .intro-lead-in {
 		font-family: "PingFang TC", "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
-		font-style: italic;
+		font-weight: 400;
 		font-size: 40px;
 		line-height: 40px;
-		margin-bottom: 25px
+		margin-bottom: 30px;
+		margin-top: 150px;
+		text-align:left;
 	}
 	header .intro-text .intro-heading {
 		font-family: "PingFang TC", Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
 		text-transform: uppercase;
-		font-weight: 700;
-		font-size: 75px;
-		line-height: 75px;
-		margin-bottom: 50px
+		font-weight: 100;
+		font-size: 22px;
+		line-height: 22px;
+		margin-bottom: 200px;
+		text-align:left;
 	}
 }
 section {
@@ -475,7 +482,8 @@ section h3.section-subheading {
 	text-align: center;
 	margin-bottom: 50px
 }
-.team-member img {
+.team-member 
+ {
 	margin: 0 auto;
 	border: 7px solid #fff
 }
