--- a/css/keeprice.css
+++ b/css/keeprice.css
@@ -87,3 +87,20 @@
         transform: scale(1);
     }
 }
+
+.keeprice-logo img{
+    float: left;
+    margin-top: 5px;
+    margin-right: 15px;
+    width: 20%;
+}
+@media (max-width:768px) {
+    .keeprice-logo img{
+    display:none;
+    }
+}
+
+img{
+    margin-left: auto;
+    margin-right: auto;
+}
