--- a/css/keeprice.css
+++ b/css/keeprice.css
@@ -5,12 +5,12 @@
     background-size: cover;
 }
 .content-section-a {
-    padding: 50px 0;
+    padding: 250px 0;
     background-color: #f8f8f8;
 }
 
 .content-section-b {
-    padding: 50px 0;
+    padding: 250px 0;
     border-top: 1px solid #e7e7e7;
     border-bottom: 1px solid #e7e7e7;
 }
@@ -18,7 +18,7 @@
     width: 70px;
     height: 70px;
     margin-top: 15px;
-    padding: 7px 16px;
+    padding: 15px 16px;
     border: 2px solid #fff;
     border-radius: 100%!important;
     font-size: 40px;
@@ -103,4 +103,10 @@
 img{
     margin-left: auto;
     margin-right: auto;
+}
+
+
+.intro-text img{
+    margin-left: -20px;
+    margin-top: -100px;
 }
