--- a/css/keeprice.css
+++ b/css/keeprice.css
@@ -5,15 +5,29 @@
     background-size: cover;
 }
 .content-section-a {
-    padding: 250px 0;
+    padding: 50px 0;
     background-color: #f8f8f8;
 }
 
 .content-section-b {
+    padding: 50px 0;
+    border-top: 1px solid #e7e7e7;
+    border-bottom: 1px solid #e7e7e7;
+}
+
+@media (min-width:768px) {
+    .content-section-a {
+    padding: 250px 0;
+    background-color: #f8f8f8;
+}
+    .content-section-b {
     padding: 250px 0;
     border-top: 1px solid #e7e7e7;
     border-bottom: 1px solid #e7e7e7;
 }
+}
+
+
 .btn-circle {
     width: 70px;
     height: 70px;
@@ -109,4 +123,8 @@ img{
 .intro-text img{
     margin-left: -20px;
     margin-top: -100px;
+}
+
+.content-wrapper{
+    padding:250px 0 ;
 }
