--- a/css/agency.css
+++ b/css/agency.css
@@ -22,7 +22,7 @@ a {
 	color: #00caca
 }
 a:hover, a:focus, a:active, a.active {
-	color: #76cece
+	color: #95e5e3
 }
 h1, h2, h4, h5, h6 {
 	font-family: "PingFang TC" ,Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -54,7 +54,26 @@ h3{
 	font-weight: 300;
     padding:18px 50px 18px 50px;
     margin-top: 70px;
+    margin-bottom: 50px;
 }
+@media (max-width:768px) {
+	.btn-primary {
+	color: #00caca;
+	background-color: #fff;
+	border-color: #00caca;
+	font-family: "PingFang TC", Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	text-transform: uppercase;
+	font-size:22px;
+	font-weight: 300;
+    padding:18px 50px 18px 50px;
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+
+}
+
+
+
 .btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open .dropdown-toggle.btn-primary {
 	color: #fff;
 	background-color: #95e5e3;
@@ -84,8 +103,8 @@ h3{
 }
 .btn-xl:hover, .btn-xl:focus, .btn-xl:active, .btn-xl.active, .open .dropdown-toggle.btn-xl {
 	color: #fff;
-	background-color: #76cece;
-	border-color: #76cece;
+	background-color: #95e5e3;
+	border-color: #95e5e3;
 }
 .btn-xl:active, .btn-xl.active, .open .dropdown-toggle.btn-xl {
 	background-image: none
@@ -107,7 +126,7 @@ h3{
 	font-family: "PingFang TC", "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive
 }
 .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:active, .navbar-default .navbar-brand.active {
-	color: #76cece
+	color: #95e5e3
 }
 .navbar-default .navbar-collapse {
 	border-color: rgba(255, 255, 255, .02)
@@ -125,22 +144,27 @@ h3{
 .navbar-default .nav li a {
 	font-family: "PingFang TC", Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	text-transform: uppercase;
-	font-weight: 400;
+	font-weight: 300;
 	letter-spacing: 1px;
-	color: #fff
+	color: #fff;
+	font-size:18px;
+	margin-left: 20px;
+	margin-right: 20px;
 }
 .navbar-default .nav li a:hover, .navbar-default .nav li a:focus {
-	color: #76cece;
+	color: #95e5e3;
 	outline: 0
 }
 .navbar-default .navbar-nav>.active>a {
 	border-radius: 0;
 	color: #00caca;
 	background-color: #fff;
+	padding-left:30px;
+	padding-right:30px;
 }
 .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
 	color: #fff;
-	background-color: #76cece
+	background-color: #95e5e3
 }
 @media (min-width:768px) {
 	.navbar-default {
@@ -162,7 +186,7 @@ h3{
 	}
 	.navbar-default.navbar-shrink {
 		background-color: #95e5e3;
-		padding: 10px 0
+		padding: 15px 0
 	}
 	.navbar-default.navbar-shrink .navbar-brand {
 		font-size: 1.5em
@@ -594,7 +618,7 @@ ul.social-buttons {
 }
 ul.social-buttons li a {
 	display: block;
-	background-color: #222;
+	background-color: #00caca;
 	height: 40px;
 	width: 40px;
 	border-radius: 100%;
@@ -602,12 +626,13 @@ ul.social-buttons li a {
 	line-height: 40px;
 	color: #fff;
 	outline: 0;
+	padding:10px;
 	-webkit-transition: all .3s;
 	-moz-transition: all .3s;
 	transition: all .3s
 }
 ul.social-buttons li a:hover, ul.social-buttons li a:focus, ul.social-buttons li a:active {
-	background-color: #00caca
+	background-color: #95e5e3
 }
 .btn:focus, .btn:active, .btn.active, .btn:active:focus {
 	outline: 0
