--- a/css/keeprice.css
+++ b/css/keeprice.css
@@ -15,15 +15,29 @@
     border-bottom: 1px solid #e7e7e7;
 }
 
+.content-wrapper{
+    padding:50px 0 ;
+}
+
+.register-form{
+    padding:50px 0;
+}
+
 @media (min-width:768px) {
     .content-section-a {
-    padding: 250px 0;
+    padding: 200px 0;
     background-color: #f8f8f8;
 }
     .content-section-b {
-    padding: 250px 0;
+    padding: 200px 0;
     border-top: 1px solid #e7e7e7;
     border-bottom: 1px solid #e7e7e7;
+}
+    .content-wrapper{
+    padding:250px 0 ;
+}
+    .register-form{
+    padding:250px 0;
 }
 }
 
@@ -112,6 +126,11 @@
     .keeprice-logo img{
     display:none;
     }
+    .doll-left img{
+    display:none;    
+    } 
+
+
 }
 
 img{
@@ -119,12 +138,8 @@ img{
     margin-right: auto;
 }
 
-
 .intro-text img{
     margin-left: -20px;
     margin-top: -100px;
 }
 
-.content-wrapper{
-    padding:250px 0 ;
-}
