--- a/css/agency.css
+++ b/css/agency.css
@@ -16,7 +16,7 @@ p.large {
 	font-size: 16px
 }
 a, a:hover, a:focus, a:active, a.active {
-	outline: 0
+	outline: 0;
 }
 a {
 	color: #00caca
@@ -126,7 +126,7 @@ h3{
 	font-family: "PingFang TC", "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive
 }
 .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:active, .navbar-default .navbar-brand.active {
-	color: #95e5e3
+	color: #76cece
 }
 .navbar-default .navbar-collapse {
 	border-color: rgba(255, 255, 255, .02)
@@ -152,7 +152,7 @@ h3{
 	margin-right: 20px;
 }
 .navbar-default .nav li a:hover, .navbar-default .nav li a:focus {
-	color: #95e5e3;
+	color: #76cece;
 	outline: 0
 }
 .navbar-default .navbar-nav>.active>a {
@@ -164,7 +164,7 @@ h3{
 }
 .navbar-default .navbar-nav>.active>a:hover, .navbar-default .navbar-nav>.active>a:focus {
 	color: #fff;
-	background-color: #95e5e3
+	background-color: #76cece
 }
 @media (min-width:768px) {
 	.navbar-default {
