--- a/css/agency.css
+++ b/css/agency.css
@@ -99,7 +99,7 @@ h3{
 	font-weight: 700;
 	border-radius: 3px;
 	font-size: 18px;
-	padding: 20px 40px
+	padding: 30px 0;
 }
 .btn-xl:hover, .btn-xl:focus, .btn-xl:active, .btn-xl.active, .open .dropdown-toggle.btn-xl {
 	color: #fff;
@@ -283,7 +283,7 @@ section h3.section-subheading {
 	text-transform: none;
 	font-style: italic;
 	font-weight: 400;
-	margin-bottom: 75px
+	margin-bottom: 200px
 }
 @media (min-width:768px) {
 	section {
