--- a/css/keeprice.css
+++ b/css/keeprice.css
@@ -131,23 +131,20 @@
     } 
 }
 
-.keeprice-logo img{
-    float: left;
-    margin-top: 5px;
-    margin-right: 15px;
-    width: 20%;
+.keeprice-logo{
+    float:left;
+    margin-top: 30px;
+    width: 60%;
 }
 @media (max-width:768px) {
-    .keeprice-logo img{
+    .keeprice-logo{
     display:none;
     }
-    .doll-left img{
-    display:none;    
-    } 
-
-
 }
 
+.btn-xl-full{
+    width:100%;
+}
 
 img{
     margin-left: auto;
@@ -158,4 +155,7 @@ img{
     margin-left: -20px;
     margin-top: -100px;
 }
-
+ h3{
+    margin-top: 0px;
+    margin-bottom: 20px;
+ }
