--- a/css/keeprice.css
+++ b/css/keeprice.css
@@ -159,3 +159,31 @@ img{
     margin-top: 0px;
     margin-bottom: 20px;
  }
+
+.dropdown-toggle{
+    background-color: transparent;;
+}
+
+
+.dropdown-menu{
+    background-color:rgba(0,0,0,0.15);
+    box-shadow: none;
+    border:0px;
+}
+
+.navbar-default .navbar-nav>.open>a, .navbar-default .navbar-nav>.open>a:focus, .navbar-default .navbar-nav>.open>a:hover{
+    background-color: transparent;
+}
+
+.dropdown-menu>li>a:focus, .dropdown-menu>li>a:hover{
+    background-color: rgba(0,0,0,0.15);
+}
+/*.navbar-default .nav li a:hover, .navbar-default .nav li a:focus*/
+.navbar-default .nav .dropdown-list a:hover{
+    color:#fff;
+}
+
+/*.navbar-default .nav .dropdown-list a{
+    margin-left: 0px;
+    margin-right: 0px;
+}*/
