--- a/css/keeprice.css
+++ b/css/keeprice.css
@@ -192,6 +192,18 @@ img{
     padding:3px 0;
 }
 
+@media (max-width:768px) {
+.navbar-default{
+background-color: #95e5e3;
+}
+}
+
+@media (max-width:990px){
+.navbar-default .nav li a{
+margin: 0 5px;
+}
+}
+
 /*.navbar-default .nav .dropdown-list a{
     margin-left: 0px;
     margin-right: 0px;
