--- a/css/agency.css
+++ b/css/agency.css
@@ -32,7 +32,7 @@ h1, h2, h4, h5, h6 {
 h3{
 	font-family: "PingFang TC" ,Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
 	text-transform: uppercase;
-	font-weight: 200;
+	font-weight: 400;
 	font-size:19px;
 }
 .img-centered {
@@ -231,7 +231,7 @@ header .intro-text .intro-heading {
 @media (min-width:768px) {
 	header .intro-text {
 		padding-top: 300px;
-		padding-bottom: 200px;
+		padding-bottom: 150px;
 
 	}
 	header .intro-text .intro-lead-in {
@@ -266,6 +266,13 @@ header .intro-text .intro-heading {
     margin-top: 10px;
 	margin-bottom: 20px;
 	text-align:left;	
+}
+
+p.section-footing {
+	color:#5c5c5c;
+	font-size: 14px;
+	margin-top: 0;
+	margin-top: 10px
 }
 
 
