--- a/css/terms.css
+++ b/css/terms.css
@@ -20,7 +20,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "inherit""Lato","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: "Helvetica","Arial","sans-serif";
     font-weight: 700;
 }
 
