--- a/css/agency.css
+++ b/css/agency.css
@@ -228,11 +228,34 @@ header .intro-text .intro-heading {
 	text-align:left;	
 }
 
-@media (min-width:768px) {
-	header .intro-text {
-		padding-top: 300px;
-		padding-bottom: 150px;
+header .iphone-remark {
+	font-family: "PingFang TC", Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 8px;
+	font-weight: 100;
+	margin: 0 0 0 0;
+	text-align: center;
+	color:#e9e9e9;
+}
 
+
+@media (min-width:768px) and (max-width:992px) {
+	header .intro-text .intro-heading {
+		margin-bottom: 50px;
+	}
+	header .intro-text .intro-lead-in {
+		margin-top: 0px;
+	}
+}
+
+@media (min-width:992px) {
+	header .intro-text .intro-heading {
+		font-family: "PingFang TC", Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+		text-transform: none;
+		font-weight: 200;
+		font-size: 22px;
+		line-height: 30px;
+		margin-bottom: 170px;
+		text-align: left;
 	}
 	header .intro-text .intro-lead-in {
 		font-family: "PingFang TC", "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -241,18 +264,26 @@ header .intro-text .intro-heading {
 		line-height: 40px;
 		margin-bottom: 30px;
 		margin-top: 60px;
-		text-align:left;
-		
+		text-align: left;	
 	}
-	header .intro-text .intro-heading {
-		font-family: "PingFang TC", Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
-		text-transform: none;
-		font-weight: 200;
-		font-size: 22px;
-		line-height: 30px;
-		margin-bottom: 170px;
-		text-align:left;
+}
+
+@media (min-width:768px) {
+	header .intro-text {
+		padding-top: 300px;
+		padding-bottom: 150px;
+
 	}
+	
+	
+	header .iphone-remark {
+	font-family: "PingFang TC", Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-size: 8px;
+	font-weight: 100;
+	margin: -25px 70px 0 -25px;
+	text-align: left;
+	color:#e9e9e9;
+    }
 }
 
 
@@ -265,7 +296,7 @@ header .intro-text .intro-heading {
     padding-top: 10px;
     margin-top: 10px;
 	margin-bottom: 20px;
-	text-align:left;	
+	text-align: left;	
 }
 
 p.section-footing {
