--- a/css/agency.css
+++ b/css/agency.css
@@ -1,6 +1,6 @@
 intro-lead-inbody {
 	overflow-x: hidden;
-	font-family: "PingFang TC", "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif
+	font-family: "Helvetica Neue", Helvetica, Arial, "PingFang TC", Montserrat, sans-serif;
 }
 .text-muted {
 	color: #777
@@ -25,12 +25,12 @@ a:hover, a:focus, a:active, a.active {
 	color: #95e5e3
 }
 h1, h2, h4, h5, h6 {
-	font-family: "PingFang TC" ,Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family:  "Helvetica Neue", Helvetica, Arial, "PingFang TC", Montserrat, sans-serif;
 	text-transform: uppercase;
 	font-weight: 700
 }
 h3{
-	font-family: "PingFang TC" ,Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family:  "Helvetica Neue", Helvetica, Arial, "PingFang TC", Montserrat, sans-serif;
 	text-transform: none;
 	font-weight: 400;
 	font-size:19px;
@@ -48,7 +48,7 @@ h3{
 	color: #00caca;
 	background-color: #fff;
 	border-color: #00caca;
-	font-family: "PingFang TC", Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family:  "Helvetica Neue", Helvetica, Arial, "PingFang TC", Montserrat, sans-serif;
 	text-transform: uppercase;
 	font-size:22px;
 	font-weight: 300;
@@ -61,7 +61,7 @@ h3{
 	color: #00caca;
 	background-color: #fff;
 	border-color: #00caca;
-	font-family: "PingFang TC", Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family:  "Helvetica Neue", Helvetica, Arial, "PingFang TC", Montserrat, sans-serif;
 	text-transform: uppercase;
 	font-size:22px;
 	font-weight: 300;
@@ -94,7 +94,7 @@ h3{
 	color: #fff;
 	background-color: #00caca;
 	border-color: #00caca;
-	font-family: "PingFang TC" , Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family:  "Helvetica Neue", Helvetica, Arial, "PingFang TC", Montserrat, sans-serif;
 	text-transform: uppercase;
 	font-weight: 700;
 	border-radius: 3px;
@@ -123,7 +123,7 @@ h3{
 }
 .navbar-default .navbar-brand {
 	color: #fff;
-	font-family: "PingFang TC", "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive
+	font-family:  "Helvetica Neue", Helvetica, Arial, "PingFang TC", Montserrat, sans-serif;
 }
 .navbar-default .navbar-brand:hover, .navbar-default .navbar-brand:focus, .navbar-default .navbar-brand:active, .navbar-default .navbar-brand.active {
 	color: #555
@@ -142,7 +142,7 @@ h3{
 	background-color: #00caca
 }
 .navbar-default .nav li a {
-	font-family: "PingFang TC", Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family:  "Helvetica Neue", Helvetica, Arial, "PingFang TC", Montserrat, sans-serif;
 	text-transform: uppercase;
 	font-weight: 300;
 	letter-spacing: 1px;
@@ -209,7 +209,7 @@ header .intro-text {
 	padding-bottom: 50px
 }
 header .intro-text .intro-lead-in {
-	font-family: "PingFang TC", "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family:  "Helvetica Neue", Helvetica, Arial, "PingFang TC", Montserrat, sans-serif;
 	font-weight: 300;
 	font-size: 32px;
 	line-height: 32px;
@@ -219,7 +219,7 @@ header .intro-text .intro-lead-in {
 
 }
 header .intro-text .intro-heading {
-	font-family: "PingFang TC", Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family:  "Helvetica Neue", Helvetica, Arial, "PingFang TC", Montserrat, sans-serif;
 	text-transform: uppercase;
 	font-weight: 200;
 	font-size: 22px;
@@ -229,9 +229,9 @@ header .intro-text .intro-heading {
 }
 
 header .iphone-remark {
-	font-family: "PingFang TC", Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family:  "Helvetica Neue", Helvetica, Arial, "PingFang TC", Montserrat, sans-serif;
 	font-size: 12px;
-	font-weight: 100;
+	font-weight:200;
 	margin: 0 0 0 0;
 	text-align: center;
 	color:#e9e9e9;
@@ -249,7 +249,7 @@ header .iphone-remark {
 
 @media (min-width:992px) {
 	header .intro-text .intro-heading {
-		font-family: "PingFang TC", Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+		font-family:  "Helvetica Neue", Helvetica, Arial, "PingFang TC", Montserrat, sans-serif;
 		text-transform: none;
 		font-weight: 200;
 		font-size: 22px;
@@ -258,7 +258,7 @@ header .iphone-remark {
 		text-align: left;
 	}
 	header .intro-text .intro-lead-in {
-		font-family: "PingFang TC", "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
+		font-family:   "Helvetica Neue", Helvetica, Arial, "PingFang TC", Montserrat, sans-serif;
 		font-weight: 400;
 		font-size: 38.5px;
 		line-height: 40px;
@@ -277,7 +277,7 @@ header .iphone-remark {
 	
 	
 	header .iphone-remark {
-	font-family: "PingFang TC", Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family:  "Helvetica Neue", Helvetica, Arial, "PingFang TC", Montserrat, sans-serif;
 	font-size: 12px;
 	font-weight: 100;
 	margin: -25px 70px 0 -25px;
@@ -288,7 +288,7 @@ header .iphone-remark {
 
 
 .lead {
-	font-family: "PingFang TC", Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family:  "Helvetica Neue", Helvetica, Arial, "PingFang TC", Montserrat, sans-serif;
 	text-transform: none;
 	font-weight: 400;
 	font-size: 18px;
@@ -318,7 +318,7 @@ section h2.section-heading {
 }
 section h3.section-subheading {
 	font-size: 16px;
-	font-family: "PingFang TC", "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family:  "Helvetica Neue", Helvetica, Arial, "PingFang TC", Montserrat, sans-serif;
 	text-transform: none;
 	font-style: italic;
 	font-weight: 400;
@@ -385,7 +385,7 @@ section h3.section-subheading {
 	margin: 0
 }
 #portfolio .portfolio-item .portfolio-caption p {
-	font-family: "PingFang TC", "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family:  "Helvetica Neue", Helvetica, Arial, "PingFang TC", Montserrat, sans-serif;
 	font-style: italic;
 	font-size: 16px;
 	margin: 0
@@ -609,25 +609,25 @@ section#contact .form-control:focus {
 	box-shadow: none
 }
 section#contact::-webkit-input-placeholder {
-	font-family: "PingFang TC", Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family:  "Helvetica Neue", Helvetica, Arial, "PingFang TC", Montserrat, sans-serif;
 	text-transform: uppercase;
 	font-weight: 700;
 	color: #bbb
 }
 section#contact:-moz-placeholder {
-	font-family: "PingFang TC", Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family:  "Helvetica Neue", Helvetica, Arial, "PingFang TC", Montserrat, sans-serif;
 	text-transform: uppercase;
 	font-weight: 700;
 	color: #bbb
 }
 section#contact::-moz-placeholder {
-	font-family: "PingFang TC", Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family:  "Helvetica Neue", Helvetica, Arial, "PingFang TC", Montserrat, sans-serif;
 	text-transform: uppercase;
 	font-weight: 700;
 	color: #bbb
 }
 section#contact:-ms-input-placeholder {
-	font-family: "PingFang TC", Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family:  "Helvetica Neue", Helvetica, Arial, "PingFang TC", Montserrat, sans-serif;
 	text-transform: uppercase;
 	font-weight: 700;
 	color: #bbb
@@ -642,15 +642,14 @@ footer {
 }
 footer span.copyright {
 	line-height: 40px;
-	font-family: "PingFang TC", Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
-	text-transform: uppercase;
+	font-family:  "Helvetica Neue", Helvetica, Arial, "PingFang TC", Montserrat, sans-serif;
 	text-transform: none;
 	color:#00caca;
 }
 footer ul.quicklinks {
 	margin-bottom: 0;
 	line-height: 40px;
-	font-family: "PingFang TC", Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family:  "Helvetica Neue", Helvetica, Arial, "PingFang TC", Montserrat, sans-serif;
 	text-transform: uppercase;
 	text-transform: none
 }
@@ -697,7 +696,7 @@ ul.social-buttons li a:hover, ul.social-buttons li a:focus, ul.social-buttons li
 }
 .portfolio-modal .modal-content p.item-intro {
 	margin: 20px 0 30px;
-	font-family: "PingFang TC", "Droid Serif", "Helvetica Neue", Helvetica, Arial, sans-serif;
+	font-family:  "Helvetica Neue", Helvetica, Arial, "PingFang TC", Montserrat, sans-serif;
 	font-size: 16px
 }
 .portfolio-modal .modal-content ul.list-inline {
